# speech_network

./: .gitignore  CMakeLists.txt  README.md
grammar/: itomp_nlp_s1.gram  itomp_nlp_s2.gram
include/speech_network/: speech_publisher.h  speech_subscriber.h
src/: speech_publisher.cpp  speech_publisher_exe.cpp  speech_subscriber.cpp  speech_subscriber_exe.cpp
vs/: speech_network.sln  speech_publisher.vcxproj  speech_subscriber.vcxproj
